<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_back">

    <include
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        layout="@layout/tool_bar" />

    <ScrollView
        android:id="@+id/contentLayout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_template"
                android:textColor="@color/primary_green"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/translateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_template"
                android:textColor="@color/primary_green"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/detailsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_green"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/primary_green"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:visibility="invisible"
        android:id="@+id/acceptButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_back"
        android:backgroundTint="@null"
        android:text="@string/accept"
        android:textAllCaps="false"
        android:textColor="@color/primary_back"
        android:textSize="24sp"
        app:backgroundTint="@null"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reScanButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_back"
        android:backgroundTint="@null"
        android:text="@string/rescan_qr_code"
        android:textAllCaps="false"
        android:textColor="@color/primary_back"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>